src/main/default/objects/Report_Template__c/Report_Template__c.object-meta.xml
<CustomObject>
    <description>This object describes a template for various reports, primarily for Mobile users.</description>
    <label>Report Template</label>
    <nameField>
        <label>Report Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Report Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>