src/main/default/objects/Report_Template__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Customer for which the attached report is available. If no customer is specified, the report is available for every customer.</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Report Templates</relationshipLabel>
    <relationshipName>Report_Templates2</relationshipName>
    <type>Lookup</type>
</CustomField>