src/main/default/objects/Report_Template__c/fields/Customer_Action_Required__c.field-meta.xml
<CustomField>
    <fullName>Customer_Action_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If selected, a customer signature is required on the attached report.</inlineHelpText>
    <label>Customer Action Required</label>
    <type>Checkbox</type>
</CustomField>