src/main/default/objects/Report_Template__c/fields/Job_Type__c.field-meta.xml
<CustomField>
    <fullName>Job_Type__c</fullName>
    <inlineHelpText>Job type for which the attached report is available. If no job type is specified, the report is available for every job type.</inlineHelpText>
    <label>Job Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>default</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>