src/main/default/objects/Report_Template__c/fields/Office__c.field-meta.xml
<CustomField>
    <fullName>Office__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Office for which the attached report is available. If no office is specified, the report is available for every office.</inlineHelpText>
    <label>Office</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Report Templates (Office)</relationshipLabel>
    <relationshipName>Report_Templates3</relationshipName>
    <type>Lookup</type>
</CustomField>