src/main/default/objects/Report_Template__c/fields/Report_Template_ID__c.field-meta.xml
<CustomField>
    <fullName>Report_Template_ID__c</fullName>
    <displayFormat>RT-{0000}</displayFormat>
    <inlineHelpText>Unique identifier for the report template.</inlineHelpText>
    <label>Report Template ID</label>
    <type>AutoNumber</type>
</CustomField>