src/main/default/objects/Report_Template__c/fields/Segment__c.field-meta.xml
<CustomField>
    <fullName>Segment__c</fullName>
    <inlineHelpText>Business segment for which the attached report is available. If no segment is specified, the report is available for every segment.</inlineHelpText>
    <label>Segment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Service Segment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>