src/main/default/objects/Report_Template__c/fields/Sequence_Number__c.field-meta.xml
<CustomField>
    <fullName>Sequence_Number__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Number used to determine the order in which the attached report displays on the sidebar of the Add New Report page in FieldFX Mobile. The Add New Report page sorts reports first by sequence number and then by report name.</inlineHelpText>
    <label>Sequence Number</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>