src/main/default/objects/Report_Template__c/fields/SObject__c.field-meta.xml
<CustomField>
    <fullName>SObject__c</fullName>
    <inlineHelpText>API name of the object for which the attached report is available. You must make an entry in this field.</inlineHelpText>
    <label>SObject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>