src/main/default/objects/Report_Template__c/fields/SObject_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>SObject_Record_Type__c</fullName>
    <inlineHelpText>Record type for which the attached report is available. If no record type is specified, the report is available for every record type.</inlineHelpText>
    <label>SObject Record Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>