src/main/default/objects/Report_Template__c/fields/SObject_Record_Type_Id__c.field-meta.xml
<CustomField>
    <fullName>SObject_Record_Type_Id__c</fullName>
    <inlineHelpText>Unique identifier for the record type specified in the "SObject Record Type" field.</inlineHelpText>
    <label>SObject Record Type Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>