src/main/default/objects/Report_Template__c/listViews/All_Report_Templates.listView-meta.xml
<ListView>
    <fullName>All_Report_Templates</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Office__c</columns>
    <columns>Segment__c</columns>
    <columns>Job_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Report Templates</label>
    <language>en_US</language>
</ListView>